@@ -10,6 +10,8 @@ Version 1.0.9 (February xxh 2013)
 - Fixed: Not displaying the 'timer' option for certain devices
 - Fixed: 'Dimmer' on the dashboard on mobile devices
 - Implemented serial port auto reconnect option 
+- Fixed: LightwaveRF dimmer value notation
+- Implemented dimmer timer support
 
 Version 1.0.8 (February 3th 2013)
 - Fixed Hardware Enabled/Disabled option
